Fixed Safari flexbox gap

--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,6 @@
 
 .section-meals {
   padding: 9.6rem 0;
-  background-color: ;
 }
 
 .meal {
